syntax = "proto3";

package eventify;

option go_package = "eventify/api/grpc/proto";

import "google/protobuf/timestamp.proto";

service EventService {
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse);
  rpc GetEvent(GetEventRequest) returns (GetEventResponse);
  rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse);
  rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResponse);
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse);
}

message CreateEventRequest {
  string name = 1;
  string description = 2;
  google.protobuf.Timestamp date = 3;
  string location = 4;
  string organizer = 5;
  string category = 6;
  repeated string tags = 7;
  int32 capacity = 8;
}

message CreateEventResponse {
  string event_id = 1;
  string message = 2;
}

message GetEventRequest {
  string event_id = 1;
}

message GetEventResponse {
  Event event = 1;
}

message UpdateEventRequest {
  string event_id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp date = 4;
  string location = 5;
  string organizer = 6;
  string category = 7;
  repeated string tags = 8;
  int32 capacity = 9;
}

message UpdateEventResponse {
  Event event = 1;
  string message = 2;
}

message DeleteEventRequest {
  string event_id = 1;
}

message DeleteEventResponse {
  string message = 1;
}

message ListEventsRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListEventsResponse {
  repeated Event events = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message Event {
  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp date = 4;
  string location = 5;
  string organizer = 6;
  string category = 7;
  repeated string tags = 8;
  int32 capacity = 9;
  string created_by = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}